/*
 * Copyright (c) 2023 Elide Ventures, LLC.
 *
 * Licensed under the MIT license (the "License"); you may not use this file except in compliance
 * with the License. You may obtain a copy of the License at
 *
 *   https://opensource.org/license/mit/
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
 * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations under the License.
 */

syntax = "proto3";

package elide.grpctest;


// Hello service interface.
service HelloService {
  // Method that renders a hello message with a given name.
  rpc RenderMessage(HelloRequest) returns (HelloResponse);
}

// Sample request payload.
message HelloRequest {
  // Rendered message.
  string name = 1;
}

// Sample response payload.
message HelloResponse {
  // Rendered message.
  string message = 1;
}
